# sqlclz

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml  python-test.yaml
docs/: gen_api.py
docs/source/: conf.py  index.rst
docs/source/api/: sqlclz.rst  sqlp.rst
src/sqlclz/: annotation.py  cli.py  diagram.py  dot.py  func_dec.py  stat_start.py  util.py
src/sqlp/: __init__.py  annotation.py  cli.py
test/unit/: _test.py  _tracks.py  test.py  test_change.py  test_func.py  test_join.py  test_sqlclz.py  test_sqlclz_func.py  test_sqlclz_stat.py  test_sqlp_stat.py
