[project]
name = "sqlclz"
version = "0.0.1"
requires-python = ">=3.10"
description = "Python functions to build a SQL (sqlite3) statement"
authors = [
    { name = "Yu-Ting Wei", email = "ytsimon2004@gmail.com" },
    { name = "Ta-Shun Su", email = "antoniost29@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["sql"]
classifiers = [
    # https://pypi.org/classifiers/
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    'Intended Audience :: Developers',
    "Typing :: Typed",
]

dependencies = ["polars", "pandas", "argclz", "rich"]


[project.urls]
Homepage = "https://github.com/ytsimon2004/sqlclz"
#Documentation = ""
Repository = "https://github.com/ytsimon2004/sqlclz"
Issues = "https://github.com/ytsimon2004/sqlclz/issues"


[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]
